# quantization-study

./: .gitignore  CLAUDE.md  PLAN.md  main.py  pyproject.toml
notebooks/: 01_model_loading_and_exploration.ipynb  02_weight_inspection.ipynb  03_baseline_evaluation.ipynb
results/: 01_model_exploration.json  02_weight_stats.json  03_baseline_evaluation.json
